jenkins: convert the markup formatter configuration to JCasC

--- a/jenkins/jenkins.yaml
+++ b/jenkins/jenkins.yaml
@@ -30,6 +30,10 @@ jenkins:
           - key: LANG
             value: en_US.utf8
 
+  markupFormatter:
+    # OWASP Markup Formatter plugin
+    rawHtml:
+      disableSyntaxHighlighting: false
   mode: EXCLUSIVE
   numExecutors: 1
   primaryView:
