--- a/jenkins/jenkins.yaml
+++ b/jenkins/jenkins.yaml
@@ -17,11 +17,6 @@ jenkins:
         - "Overall/Administer:mrc0mmand-admin-edit-view"
         - "Overall/Read:anonymous"
 
-  clouds:
-    - kubernetes:
-        # Limit the # of concurrent pods to 10
-        containerCap: 10
-
   globalNodeProperties:
     # Set LANG=en_US.utf8 everywhere to avoid encoding issues when viewing
     # logs in a browser
@@ -29,6 +24,9 @@ jenkins:
         env:
           - key: LANG
             value: en_US.utf8
+
+  # Note: don't add anything to the clouds.kubernetes section here, as it
+  # completely _overrides_ the pod templates provided by OCP
 
   markupFormatter:
     # OWASP Markup Formatter plugin
