--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -6,7 +6,7 @@ name: Lint Code Base
 on:
   pull_request:
     branches:
-      - master
+      - main
 
 jobs:
   build:
@@ -23,7 +23,7 @@ jobs:
       - name: Lint Code Base
         uses: github/super-linter@v4
         env:
-          DEFAULT_BRANCH: master
+          DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           MULTI_STATUS: true
           # Check only new/edited files
