jenkins: add ANSIColor plugin
To make console output much more pleasant to look at.

--- a/jenkins/jenkins.yaml
+++ b/jenkins/jenkins.yaml
@@ -73,6 +73,8 @@ jenkins:
         name: "Upstream-stable"
 
 unclassified:
+  ansiColorBuildWrapper:
+    globalColorMapName: "xterm"
   ghprbTrigger:
     adminlist: "mrc0mmand"
     manageWebhooks: false
