--- a/jenkins/jenkins.yaml
+++ b/jenkins/jenkins.yaml
@@ -11,11 +11,11 @@ jenkins:
       # Allow viewing jobs to anonymous users
       # Note: this _replaces_ the whole permissions matrix
       permissions:
-        - "GROUP:Overall/Read:anonymous"
-        - "GROUP:Job/Discover:anonymous"
-        - "GROUP:Job/Read:anonymous"
-        - "GROUP:Job/ViewStatus:anonymous"
+        - "USER:Job/Discover:anonymous"
+        - "USER:Job/Read:anonymous"
+        - "USER:Job/ViewStatus:anonymous"
         - "USER:Overall/Administer:mrc0mmand-admin-edit-view"
+        - "USER:Overall/Read:anonymous"
 
   globalNodeProperties:
     # Set LANG=en_US.utf8 everywhere to avoid encoding issues when viewing
